# emotional-memory

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  .zenodo.json  404.html  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  RELEASING.md  ROADMAP.md  SECURITY.md  benchmark-results.json  codecov.yml  codemeta.json  index.html  mkdocs.yml  objects.inv  pyproject.toml  release.toml  ruff.toml  sitemap.xml
.github/: PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/issue_templates/: issue_1_readme_when_not_to_use.md
.github/workflows/: ci.yml  codeql.yml  docs.yml  pr-title.yml  release.yml  zizmor.yml
api/affect/: index.html
api/appraisal/: index.html
api/appraisal_schema/: index.html
api/async_engine/: index.html
api/categorize/: index.html
api/decay/: index.html
api/embedders/: index.html
api/engine/: index.html
api/interfaces/: index.html
api/models/: index.html
api/mood/: index.html
api/query_classifier/: index.html
api/resonance/: index.html
api/retrieval/: index.html
api/state/: index.html
api/state_stores/: index.html
api/stores/: index.html
api/telemetry/: index.html
api/visualization/: index.html
architecture/module-overview/: index.html
benchmarks/: README.md  conftest.py  index.html  preregistration.md  preregistration_addendum_a_closure.md  preregistration_addendum_bc_closure.md  preregistration_addendum_f.md  preregistration_addendum_f_closure.md  preregistration_addendum_g.md  preregistration_addendum_g_closure.md  preregistration_addendum_h.md  preregistration_addendum_hd2_closure.md  preregistration_addendum_hd2_powertopup.md  preregistration_addendum_hd2_powertopup_closure.md  preregistration_addendum_i.md  preregistration_addendum_i_closure.md  preregistration_addendum_j.md  preregistration_addendum_j_closure.md  preregistration_addendum_k_dailydialog.md  preregistration_addendum_k_dailydialog_closure.md  preregistration_addendum_k_retry.md  preregistration_addendum_l_query_routing.md  preregistration_addendum_l_query_routing_closure.md  preregistration_addendum_m_fr.md  preregistration_addendum_m_fr_closure.md  preregistration_addendum_n_appraisal_calibration.md  preregistration_addendum_n_appraisal_calibration_closure.md  preregistration_addendum_o_mapping_recalibration.md  preregistration_addendum_o_mapping_recalibration_closure.md  preregistration_addendum_p_hg1_rerun.md  preregistration_addendum_p_hg1_rerun_closure.md  preregistration_addendum_q_affect_gating.md  preregistration_addendum_q_affect_gating_closure.md  preregistration_addendum_r_downstream.md  preregistration_addendum_r_downstream_closure.md  preregistration_addendum_s3_closure.md  preregistration_addendum_s_human_gold_appraisal.md  preregistration_addendum_s_human_gold_appraisal_closure.md  preregistration_addendum_t2a_naturalistic_query_appraisal.md  preregistration_addendum_t2a_naturalistic_query_appraisal_closure.md  (+15 more)
benchmarks/ablation/: results.hi3.json  results.hi3.md  results.hi3.protocol.json  results.json  results.md  results.protocol.json  results.sbert.json  results.sbert.md  results.sbert.protocol.json  results.v2.e5.json  results.v2.e5.md  results.v2.e5.protocol.json  results.v2.sbert.json  results.v2.sbert.md  results.v2.sbert.protocol.json  results.v3.e5.md  results.v3.e5.protocol.json  results.v3.sbert.md  runner.py  runner_hi3.py
benchmarks/appraisal_calibration/: dump_sec.py  fit.py  results.recalibration.gpt5mini.json  results.recalibration.gpt5mini.md  sec_dump.gpt5mini.jsonl  split.scenarios.seed42.json
benchmarks/appraisal_confound/: README.md  __init__.py  results.confirmatory.json  results.confirmatory.md  results.hd2.sbert.json  (+32 more)
comparison/: index.html
demo/: README.md  app.py  requirements.txt
docs/: benchmarks.md  comparison.md  gap_analysis_issues.md  getting-started.md  index.md  mental_model.md  migration.md  production-readiness.md
examples/: advanced_config.py  appraisal_engines.py  async_usage.py  basic_usage.py  emotional_journal.py  httpx_llm_integration.py  llm_appraisal.py  persistence.py  reconsolidation.py  resonance_network.py  retrieval_signals.py  sentence_transformers_embedder.py  visualization.py
gap_analysis_issues/: index.html
getting-started/: index.html
mental_model/: index.html
migration/: index.html
paper/: ARXIV_CHECKLIST.md  SUBMISSION.md  arxiv-submission.sha256  main.tex  refs.bib
production-readiness/: index.html
research/: claim_validation_matrix.json  figure_inventory.json  index.html
scripts/: bump_version.py  check_doi_freshness.py  check_llm_config.py  check_metadata_ssot.py  check_python_version_consistency.py  check_release_metadata.py  generate_docs_images.py  generate_paper_figures.py  generate_realistic_v2_topup.py  generate_realistic_v3.py  generate_research_figures.py  preflight.py  release.py  reproduce_paper.py  resolve_version.py  swh_client.py  sync_release_metadata.py  validate_dataset.py  verify_pypi_release.py  zenodo_deposit.py
search/: search_index.json
tests/: conftest.py  llm_helpers.py  test_ablation_flags.py  test_ablation_runner.py  test_affect.py  test_appraisal.py  test_appraisal_diagnostics_runner.py  test_appraisal_llm.py  test_appraisal_schema.py  test_arousal_calibration.py  test_async_adapters.py  test_async_engine.py  test_benchmark_stats.py  test_categorize.py  test_check_doi_freshness.py  test_chroma_store.py  test_claim_validation_matrix.py  test_comparative.py  test_dataset.py  test_decay.py  test_demo_app.py  test_demo_ui_config.py  test_dual_path.py  test_engine.py  test_examples.py  test_figure_inventory.py  test_human_eval_pipeline.py  test_human_eval_significance.py  test_init_exports.py  test_integration.py  test_integrations_optional_imports.py  test_langchain_adapter.py  test_llm_http.py  test_llm_integration.py  test_locomo_adapter.py  test_madialbench.py  test_math.py  test_mem0_adapter.py  test_models.py  test_mood.py  (+25 more)
tools/: audit_claim_refs.py  audit_figure_inventory.py
(+321 files in other folders)
