[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "emotional_memory"
version = "0.5.1"
description = "Emotional memory library for LLMs based on Affective Field Theory"
requires-python = ">=3.11"
license = "MIT"
readme = "README.md"
authors = [{ name = "Gianluca Mazza", email = "info@gianlucamazza.it" }]
keywords = ["llm", "memory", "emotion", "affective-computing", "ai"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Typing :: Typed",
]
dependencies = ["numpy>=1.24", "pydantic>=2.0,<3"]

[project.urls]
Homepage = "https://github.com/gianlucamazza/emotional-memory"
Repository = "https://github.com/gianlucamazza/emotional-memory"
"Bug Tracker" = "https://github.com/gianlucamazza/emotional-memory/issues"
Changelog = "https://github.com/gianlucamazza/emotional-memory/blob/main/CHANGELOG.md"
Documentation = "https://gianlucamazza.github.io/emotional-memory"

[project.optional-dependencies]
dev = [
  "pytest>=7",
  "pytest-cov>=5",
  "pytest-asyncio>=0.24",
  "ruff>=0.4",
  "mypy>=1.10",
]
bench = ["pytest-benchmark>=4.0", "psutil>=5.9"]
llm-test = ["httpx>=0.27"]
dotenv = ["python-dotenv>=1.0"]
sentence-transformers = ["sentence-transformers>=2.2"]
sqlite = ["sqlite-vec>=0.1.1"]
langchain = ["langchain-core>=0.3"]
viz = ["matplotlib>=3.7"]
docs = ["mkdocs>=1.6", "mkdocs-material>=9.5", "mkdocstrings[python]>=0.25"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --tb=short -m 'not llm and not appraisal_quality'"
pythonpath = ["tests", "benchmarks"]
python_files = ["test_*.py", "bench_*.py"]
python_functions = ["test_*", "bench_*"]
asyncio_mode = "auto"
strict_markers = true
markers = [
  "fidelity: psychological fidelity benchmarks",
  "perf: performance benchmarks",
  "llm: integration tests requiring a real LLM (skipped without EMOTIONAL_MEMORY_LLM_API_KEY)",
  "appraisal_quality: LLM appraisal prompt quality benchmarks (skipped without EMOTIONAL_MEMORY_LLM_API_KEY)",
]

[tool.coverage.run]
source = ["emotional_memory"]
branch = true

[tool.coverage.report]
show_missing = true
skip_empty = true
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:", "\\.\\.\\."]
fail_under = 80

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
packages = ["emotional_memory"]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
# Optional dependencies without bundled type stubs — ignore missing imports
# so mypy works whether or not the extra is installed, with no # type: ignore
# comments needed in source code.
module = ["sentence_transformers", "sentence_transformers.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["langchain_core", "langchain_core.*"]
ignore_missing_imports = true
